--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
     <title>Hello AppSus</title>
   </head>
   <body>
     <div id="app"></div>
-    <h1>Hello AppSus</h1>
-
 
     <script src="js/lib/vue.global.js"></script>
     <script src="js/lib/vue-router.js"></script>
