added asynchornos fontawesome script

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://use.fontawesome.com/09fae738b4.js"></script>
+    <script src="https://use.fontawesome.com/6a82976e65.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
