--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="app"></div>
 
+    <script src="js/lib/axios.js"></script>
     <script src="js/lib/vue.global.js"></script>
     <script src="js/lib/vue-router.js"></script>
     <script type="module" src="js/main.js"></script>
